SFDC DevOps Test/src/objects/Test_Script__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents an executable script for a specific test scenario.</description>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <description>This is to Capture the actual result of Test script</description>
        <label>Actual Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on the test execution</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the test script</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment_Detail__c</fullName>
        <description>Environment Details for Test Script</description>
        <label>Environment Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <description>Date of test execution</description>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Steps__c</fullName>
        <description>Execution steps for the test script</description>
        <label>Execution Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <description>Type of test execution</description>
        <label>Execution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unit Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <description>Expected results of the test script</description>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Input_Data__c</fullName>
        <description>Input data for the test script</description>
        <label>Input Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <description>Release of the test script</description>
        <formula>Test_Scenario__r.Release__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Request for which the test script is created</description>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Case_Failures__c</fullName>
        <description>Number of Test case execution failures for the test script</description>
        <label>Test Case Failures</label>
        <summarizedField>Test_Case__c.Execution_failures__c</summarizedField>
        <summaryFilterItems>
            <field>Test_Case__c.Execution_failures__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Case__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <description>Result of test execution</description>
        <label>Test Result</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Script Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Scenario__c</fullName>
        <description>Test scenario of the test script</description>
        <label>Test Scenario</label>
        <referenceTo>Test_Scenario__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_Login_Details__c</fullName>
        <description>Added a field for User Details where login information will be added</description>
        <label>User Login Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version of the test script</description>
        <label>Version</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Test_Executions__c</fullName>
        <description>Number of Test case executions for the test script</description>
        <label># of Test Executions</label>
        <summarizedField>Test_Case__c.of_Test_Executions__c</summarizedField>
        <summaryForeignKey>Test_Case__c.Test_Script__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Test Script</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TestScript-{0000000000}</displayFormat>
        <label>Test Script ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>